@@ -1,9 +1,9 @@
 package fr.Brunoy.gestion_tournois_FFTT.domain.competition.model.value;
 
-import fr.Brunoy.gestion_tournois_FFTT.common.exception.*;
+import fr.Brunoy.gestion_tournois_FFTT.common.exception.BusinessException;
+import fr.Brunoy.gestion_tournois_FFTT.common.exception.ErrorCode;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
@@ -16,26 +16,25 @@ public final class PrizeDistribution {
             throw new BusinessException(ErrorCode.TABLEAU_PRIZE_REQUIRED);
         }
 
-        // copie défensive + tri
         List<PrizeTier> copy = new ArrayList<>(tiers);
+
+        if (copy.stream().anyMatch(t -> t == null)) {
+            throw new BusinessException(ErrorCode.TABLEAU_PRIZE_INCONSISTENT);
+        }
+
         copy.sort(Comparator.comparingInt(PrizeTier::fromRank));
 
-        // vérifier chevauchements / incohérences
-        for (int i = 0; i < copy.size(); i++) {
+        for (int i = 1; i < copy.size(); i++) {
+            PrizeTier prev = copy.get(i - 1);
             PrizeTier current = copy.get(i);
 
-            // (montant négatif et rangs invalides déjà gérés dans PrizeTier)
-            if (i > 0) {
-                PrizeTier prev = copy.get(i - 1);
-                // chevauchement si prev.toRank >= current.fromRank
-                if (prev.toRank() >= current.fromRank()) {
-                    throw new BusinessException(ErrorCode.TABLEAU_POINTS_RULE_INCONSISTENT);
-                    // idéalement créer: TABLEAU_PRIZE_INCONSISTENT
-                }
+            // chevauchement si prev.toRank >= current.fromRank
+            if (prev.toRank() >= current.fromRank()) {
+                throw new BusinessException(ErrorCode.TABLEAU_PRIZE_INCONSISTENT);
             }
         }
 
-        this.tiers = Collections.unmodifiableList(copy);
+        this.tiers = List.copyOf(copy);
     }
 
     public List<PrizeTier> tiers() {
@@ -51,5 +50,10 @@ public final class PrizeDistribution {
                 return tier.amount();
         }
         return 0;
+    }
+
+    @Override
+    public String toString() {
+        return tiers.toString();
     }
 }
